# method-of-characteristics

engine_inlet/: .gitignore  AIMCAT.py  AIMCAT_Control_Script.py  AIMCAT_test_cases.py  LICENSE  README.md  pyproject.toml  requirements.txt
engine_inlet/Input/: 2D_isentropic_ramp_M2.7_input.json  2D_isentropic_ramp_M2.7_isentropic_mesh_input.json  NASA_D6078_M3.47_input.json  NASA_D6078_M3.47_isentropic_mesh_input.json  NASA_D6078_M3_input.json  NASA_D6078_M3_isentropic_mesh_input.json  NASA_D6078_M3_shock_mesh_input.json  generic_mach_line_idl_input.json  straight_cone_M2.5_input.json  straight_cone_M2.5_isentropic_mesh_input.json
engine_inlet/aimcat/: AIMCAT.py  geom_pre_processor.py  idl.py  input.py  post_process.py
engine_inlet/aimcat/method_of_characteristics/: moc_mesh_engine.py  oblique_shock_point_irrot.py  unit_processes.py
engine_inlet/data/geometry/: 2D_isentropic_ramp_M2.7_geom.json  NASA_D6078_M3.47_Interpolated.json  NASA_D6078_M3.47_geom.json  NASA_D6078_M3_Interpolated.json  NASA_D6078_M3_geom.json
engine_inlet/data/input_files/: 2D_isentropic_ramp_M2.7_isentropic_mesh_input.json  NASA_D6078_M3.47_shock_mesh_input.json  (+5 more)
engine_inlet/geometry/: NASA_D6078_M3_geom.json  geom_pre_processor.py
engine_inlet/initial_data_line/: idl.py
engine_inlet/method_of_characteristics/: moc_mesh_engine.py  oblique_shock_point_irrot.py
engine_inlet/post_processing/: plot_all.json  plot_mesh.json  post_process.py
engine_inlet/scripts/: AIMCAT_test_cases.py
engine_inlet/tests/: testing_oblique_shock.py  testing_taylor_maccoll.py  testing_unit_processes.py
(+10 files in other folders)
