[project]
name = "aimcat"
version = "1.0.0"
authors = [
    { name="Shay Takei", email="shaystakei@gmail.com" }
]
description = "aimcat - Air Inlet Method of Characteristics Analysis Tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib",
  "scipy",
  "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"